ks8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80           # Porta acessível pelo cliente
      targetPort: 8080   # Porta onde o contêiner está escutando
  sessionAffinity: ClientIP
  type: ClusterIP         # Tipo adequado para uso com Ingress
